--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "object-curly-newline": ["error", {
+      "consistent": true
+    }]
   }
 }
