--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
   },
   "[scss]": {
     "editor.defaultFormatter": "HookyQR.beautify"
-  }
+  },
+  "eslint.format.enable": true,
+  "eslint.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "typescript.format.enable": true
 }
