Create sign up form

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
-    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.10.0",
     "@mui/joy": "^5.0.0-alpha.42",
-    "@mui/system": "^5.10.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
