--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,12 @@
     "react/react-in-jsx-scope": "off",
     "object-curly-newline": ["error", {
       "consistent": true
-    }]
+    }],
+    "react/function-component-definition": ["error",
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ]
   }
 }
