--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
     "@mui/joy": "^5.0.0-alpha.42",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
